--- a/style.css
+++ b/style.css
@@ -1,38 +1,51 @@
 
-
+.teste{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 200;
+    color: white;
+}
 
 html{
     background-image: url(img/arena1080.jpg);
    text-align: center;
 }
 h1{
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.89);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 200;
 }
 iframe{
+    cursor:pointer;
     border: 10px  #03ff18e5 ;
     border-style: groove;
     border-radius: 18px;
 }
+
 button{
-    width: 123px;
+    cursor: pointer;
+    width: 120px;
     height: 70px;
     font-size: 20px;
     margin: 11px;
-    border: 5px groove rgba(241, 245, 6, 0.993);
-    border-radius: 10px;
+    border: 2px groove rgb(229, 255, 0);
+    border-radius: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: rgba(255, 255, 255, 0.801);
+    color: rgb(255, 255, 255);
     font-weight: 200;
-    background-color: rgba(94, 255, 1, 0.336);
+    background-color: rgba(9, 255, 1, 0.541);
     
 }
+
+
+
+
 
 img{
     border: 10px;
     border-top-left-radius: 30px;
     border-bottom-right-radius: 30px;
     margin: 25px;
-    width: 200px;
+    width: 160px;
 }
+
+
